// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainPageTest  /> Renders DescriptionPageTest component snapshot2 1`] = `
<ErrorBoundary>
  <React.Fragment>
    <div
      className="main-page container"
    >
      <Connect(FilterBlock)
        fetchMovies={[MockFunction]}
        goToDescription={[MockFunction]}
        isLoadingMovies={false}
        location={
          Object {
            "search": "a",
          }
        }
        movies={Array []}
        total={0}
      />
      <NoFilmsFound />
    </div>
  </React.Fragment>
</ErrorBoundary>
`;

exports[`<MainPageTest  /> Renders DescriptionPageTest component snapshot3 1`] = `
<ErrorBoundary>
  <React.Fragment>
    <div
      className="main-page container"
    >
      <Connect(FilterBlock)
        fetchMovies={[MockFunction]}
        goToDescription={[MockFunction]}
        isLoadingMovies={false}
        location={
          Object {
            "search": "a",
          }
        }
        movies={Array []}
        total={3000}
      />
      <MovieItemsBlock
        handleGoToDescriptionPage={[Function]}
        movies={Array []}
      />
    </div>
  </React.Fragment>
</ErrorBoundary>
`;

exports[`<MainPageTest  /> Renders MainPageTest component 1`] = `
<ErrorBoundary>
  <React.Fragment>
    <div
      className="main-page container"
    >
      <Connect(FilterBlock)
        fetchMovies={[MockFunction]}
        goToDescription={[MockFunction]}
        isLoadingMovies={true}
        location={
          Object {
            "search": "a",
          }
        }
        movies={Array []}
        total={0}
      />
      Loading...
    </div>
  </React.Fragment>
</ErrorBoundary>
`;
